Only HTMl Portfolio

--- a/4.3 HTML Porfolio Project/index.html
+++ b/4.3 HTML Porfolio Project/index.html
@@ -1,15 +1,24 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
-
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Html Portfolio</title>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    </head>
+    <body>
+<h1>Welcome to Chandu's Portfolio</h1>
+<hr />
+<h2>You can see my only html portfolio here:</h2>
+<h2>Here is the exciting list of my Most Favourite top 3 Movies</h2>
+<a href="./public/movie-ranking.html"><img src="./assets/images/Movie_Rankings.png" height="200" alt="Movie Rankings" /></a>
+<h2>And here is the Invitation to my Birthday Party:</h2>
+<a href="./public/birthday-invite.html"><img src="./assets/images/Birthday_Invite.png" alt="Birthday Party Invite" draggable="true" height="200" /></a>
+<h3>
+    Feel free to have a look at the code.
+</h3>
+    </body>
+    <footer>
+   <a href="./public/about.html">About Me</a>
+   <a href="./public/contact.html">Contact Details</a>
+    </footer>
+</html>
