--- a/4.3 HTML Porfolio Project/public/about.html
+++ b/4.3 HTML Porfolio Project/public/about.html
@@ -1,20 +1,59 @@
 <h1>About Me</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sem tellus, sagittis non odio nec, interdum
-  elementum lacus. Ut ac justo eget risus sollicitudin fringilla sed ut leo. Ut condimentum elit nec fermentum lobortis.
-  Quisque tincidunt quam nec tincidunt ullamcorper. Integer vitae pretium justo. In placerat volutpat pellentesque.
-  Etiam
-  gravida quam vitae odio pulvinar imperdiet. Vivamus venenatis gravida purus sit amet aliquet. Ut in nibh sed quam
-  laoreet lacinia. Cras cursus ut dui vitae posuere. Vivamus volutpat urna vitae odio fringilla placerat. Nulla vel
-  rhoncus sapien. Phasellus at interdum enim.</p>
+<p>I'm an enthusiastic Machine Learning Learner and a Data Scientist.</p>
 
-<p>Curabitur elementum sagittis mollis. In porta nec quam ut semper. Nulla volutpat neque quis lacus mattis eleifend.
-  Phasellus et congue odio. Mauris tristique, nisl quis porttitor porttitor, tortor ante mattis ex, at dictum tortor
-  dolor
-  ut sem. Nullam nec libero non ex porta vulputate a eu sapien. In nec bibendum mauris. Fusce iaculis lectus vel magna
-  laoreet gravida.</p>
+<div>
+  <ul>
+    <li>As an International student at Saint Louis University, I am dedicated to pursuing a Master's degree in Computer
+      and
+      Information Sciences with a specialized focus on Machine Learning. My passion lies in applying cutting-edge
+      technology
+      to tackle real-world challenges, creating models capable of analyzing intricate data and providing valuable
+      insights.</li>
+    <li>With multiple certifications in Machine Learning, Data Science, and Deep Learning, I have a strong foundation in
+      the
+      latest algorithms and techniques. My goal is to continually expand my expertise to stay at the forefront of this
+      rapidly evolving field.</li>
 
-<p>Donec euismod vestibulum arcu, a blandit metus mattis ultrices. Integer quis hendrerit justo. Maecenas sed tempor mi.
-  Fusce egestas urna leo. Mauris viverra sem sed libero egestas, volutpat aliquet magna porta. Quisque id diam sed ipsum
-  interdum sollicitudin id quis augue. Donec congue nisl nec massa ornare imperdiet quis quis odio. Etiam ut volutpat
-  nisl. Vestibulum hendrerit justo nibh, eget consequat magna fermentum finibus. Pellentesque et urna fringilla, rutrum
-  neque in, varius leo. Vestibulum efficitur id massa eget pellentesque.</p>
+    <li>In addition to my Machine Learning pursuits, I bring a wealth of experience as a Full Stack MERN Developer.
+      During my
+      tenure at Qentelli as an Associate Software Engineer and UI Developer, I spent over a year honing my skills in web
+      development. I've successfully developed and deployed a range of web applications using React, Node, Express,
+      MongoDB,
+      and AWS. These applications are not just user-friendly but also scalable and secure, meeting the highest industry
+      standards.</li>
+    <li>
+      My work has often involved close collaboration with cross-functional teams and clients, ensuring the delivery of
+      high-quality products and services. I thrive on the challenge of creating innovative solutions and exceeding
+      expectations.</li>
+  </ul>
+  <br />
+  I'm eager to connect with professionals in the technology industry, exploring new career opportunities that allow me
+  to leverage my skills and knowledge to drive a positive impact in the world. If you're interested in discussing
+  potential collaborations or opportunities, please feel free to reach out. Let's shape the future together.As an
+  International student at Saint Louis University, I am dedicated to pursuing a Master's degree in Computer and
+  Information Sciences with a specialized focus on Machine Learning. My passion lies in applying cutting-edge technology
+  to tackle real-world challenges, creating models capable of analyzing intricate data and providing valuable insights.
+  With multiple certifications in Machine Learning, Data Science, and Deep Learning, I have a strong foundation in the
+  latest algorithms and techniques. My goal is to continually expand my expertise to stay at the forefront of this
+  rapidly evolving field. In addition to my Machine Learning pursuits, I bring a wealth of experience as a Full Stack
+  MERN Developer. During my tenure at Qentelli as an Associate Software Engineer and UI Developer, I spent over a year
+  honing my skills in web development. I've successfully developed and deployed a range of web applications using React,
+  Node, Express, MongoDB, and AWS. These applications are not just user-friendly but also scalable and secure, meeting
+  the highest industry standards. My work has often involved close collaboration with cross-functional teams and
+  clients, ensuring the delivery of high-quality products and services. I thrive on the challenge of creating innovative
+  solutions and exceeding expectations. I'm eager to connect with professionals in the technology industry, exploring
+  new career opportunities that allow me to leverage my skills and knowledge to drive a positive impact in the world. If
+  you're interested in discussing potential collaborations or opportunities, please feel free to reach out. Let's shape
+  the future together.
+</div>
+
+<div>
+  <h2>Top 5 skills:</h2>
+  <ol>
+    <li>Machine Learning</li>
+    <li>Data Science </li>
+    <li>Web Development</li>
+    <li>React.js</li>
+    <li>Python (Programming Language)</li>
+  </ol>
+</div>
