--- a/4.3 HTML Porfolio Project/public/contact.html
+++ b/4.3 HTML Porfolio Project/public/contact.html
@@ -1,9 +1,11 @@
 <h1>Contact Me</h1>
-<p>Tel: +123456789</p>
-<p>Email: me@gmail.com</p>
+
+<p>Tel: +3147230206</p>
+<p>Email: chandu.bathula16@gmail.com</p>
+
 <p>Address:</p>
-<p>
-  123 North Street<br />
-  Some City<br />
-  Some Country <br />
-</p>
+<address>
+3615 Olive Street
+Saint Louis, MO
+Zip: 63108
+</address>
