--- a/4.3 HTML Porfolio Project/public/movie-ranking.html
+++ b/4.3 HTML Porfolio Project/public/movie-ranking.html
@@ -1,9 +1,19 @@
-<h1>The Best Movies According to Angela</h1>
-<h2>My top 3 movies of all-time.</h2>
+<!-- Write your code below -->
+
+<h1>Best Movies According to Chandu</h1>
+
+<h2>All time favorite movies</h2>
+
 <hr />
-<h3>Spirited Away</h3>
-<p>This is my favourite anime. I love the beautiful images.</p>
-<h3>Ex Machina</h3>
-<p>Really cool sci-fi movie.</p>
-<h3>Drive</h3>
-<p>Super beautiful film. Really artistic.</p>
+
+<h3>The Shawshank Redemption</h3>
+<img alt="Shawshank redemption movie poster" height="100" width="100" src="./Shawshank.jpg" />
+<p>A Masterpiece of all the movies till date.</p>
+
+<h3>Jalsa</h3>
+<img alt="jalsa movie poster" height="100" width="100" src="./jalsa.jpeg" />
+<p>Thoughtprovoking Movie.</p>
+
+<h3>The God Father</h3>
+<img alt="The God Father movie poster" height="100" width="100" src="./TheGodFather.jpg" />
+<p>Movie which re-defined the world of cinema.</p>
