--- a/2.4 Movie Ranking Project/index.html
+++ b/2.4 Movie Ranking Project/index.html
@@ -7,10 +7,13 @@
 <hr />
 
 <h3>The Shawshank Redemption</h3>
+<img alt="Shawshank redemption movie poster" height="100" width="100" src="./Shawshank.jpg" />
 <p>A Masterpiece of all the movies till date.</p>
 
 <h3>Jalsa</h3>
+<img alt="jalsa movie poster" height="100" width="100" src="./jalsa.jpeg" />
 <p>Thoughtprovoking Movie.</p>
 
 <h3>The God Father</h3>
+<img alt="The God Father movie poster" height="100" width="100" src="./TheGodFather.jpg" />
 <p>Movie which re-defined the world of cinema.</p>
