--- a/4.3 HTML Porfolio Project/index.html
+++ b/4.3 HTML Porfolio Project/index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
 <h1>Welcome to Chandu's Portfolio</h1>
+<h2>I'm a Web Developer and a ML enthusiastic personality.</h2>
 <hr />
 <h2>You can see my only html portfolio here:</h2>
 <h2>Here is the exciting list of my Most Favourite top 3 Movies</h2>
@@ -16,9 +17,10 @@
 <h3>
     Feel free to have a look at the code.
 </h3>
+<hr />
+<footer>
+    <a href="./public/about.html">About Me</a>
+    <a href="./public/contact.html">Contact Details</a>
+     </footer>
     </body>
-    <footer>
-   <a href="./public/about.html">About Me</a>
-   <a href="./public/contact.html">Contact Details</a>
-    </footer>
 </html>
