--- a/4.3 HTML Porfolio Project/public/contact.html
+++ b/4.3 HTML Porfolio Project/public/contact.html
@@ -5,7 +5,7 @@
 
 <p>Address:</p>
 <address>
-3615 Olive Street
-Saint Louis, MO
-Zip: 63108
+<p>3615 Olive Street</p>
+<p>Saint Louis, MO</p>
+<p>Zip: 63108</p>
 </address>
