--- a/CSS/6.4 Motivation Meme Project/index.html
+++ b/CSS/6.4 Motivation Meme Project/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <header>
-    <h1 class="title">Motivation with Memes.</h1>
+    <h1 class="title">Motivation from Memes.</h1>
   </header>
   <div class="parent-div">
     <div class="container">
