--- a/CSS/Specifity-Importance.html
+++ b/CSS/Specifity-Importance.html
@@ -51,6 +51,16 @@
                         style sheets.</b></i></span>
 
         </div>
+        <div>
+            <h2>!important Keyword and it's importance</h2>
+            <p>.item {
+                color: blue;
+                color:red !important;
+                }
+            </p>
+            <span><i><b>Here color:red will be applied. Applying !importance keyword to a property will make it the most
+                        important value to that relative property and element.</b></i></span>
+        </div>
     </div>
 </body>
 
