--- a/CSS/Specifity-Importance.html
+++ b/CSS/Specifity-Importance.html
@@ -52,16 +52,17 @@
 
         </div>
     </div>
-            <div style="background-color: bisque; padding:10px">
-            <h2>!important Keyword and it's importance</h2>
-            <p>.item {
-                color: blue;
-                color:red !important;
-                }
-            </p>
-            <span><i><b>Here color:red will be applied. Applying !importance keyword to a property will make it the most
-                        important value to that relative property and element.</b></i></span>
-        </div>
+    <div style="background-color: bisque; padding:10px">
+        <h2>!important Keyword and it's importance</h2>
+        <p>.item {
+            color: blue;
+            color:red !important;
+            }
+        </p>
+        <span><i><b>Here color:red will be applied. Applying !importance keyword to a property will make it the most
+                    important value to that relative property and element. "!important" keyword even dominatesd the
+                    inline styles and acts as the priority.</b></i></span>
+    </div>
 </body>
 
 </html>
