added a title to 7.1

--- a/CSS/7.0 CSS Cascade/index.html
+++ b/CSS/7.0 CSS Cascade/index.html
@@ -8,6 +8,8 @@
 </head>
 
 <body>
+  <h1>This is a Challenge.
+  </h1>
   <div id="outer-box" class="box">
     <div class="box">
       <p>Yellow Text</p>
