--- a/CSS/7.3 CSS Flag Project/index.html
+++ b/CSS/7.3 CSS Flag Project/index.html
@@ -5,8 +5,49 @@
   <meta charset="UTF-8">
   <title>CSS Flag Project</title>
   <style>
-    /* Write your CSS Code here */
-    
+    /* Write your CSS Code here 
+    Red Rectangle*/
+    .flag {
+      width: 900px;
+      height: 600px;
+      background-color: #CE1126;
+      position: relative;
+    }
+
+    /* Blue Rectangle */
+    .flag>div {
+      background-color: #002868;
+      width: 100%;
+      height: 300px;
+      position: absolute;
+      top: 150px;
+    }
+
+    /*White Circle */
+    .flag>div>div {
+      width: 200px;
+      height: 200px;
+      background-color: #fff;
+      border-radius: 50%;
+      position: relative;
+      top: 50px;
+      left: 350px;
+    }
+
+    p {
+      margin: 0;
+      font-size: 5rem;
+      text-align: center;
+      color: white;
+    }
+
+    body>div>div>div>p {
+      color: black;
+    }
+ /* Same as the above code  
+ .flag div div p {
+      color: black;
+    } */
   </style>
 </head>
 
