--- a/CSS/8.1 CSS Float/index.html
+++ b/CSS/8.1 CSS Float/index.html
@@ -1,11 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- TODO
-1. Make both paragraph elements wrap around the image.
-2. Use Float to move the cat div to the left and the dog div to the right.
-3. Use clear to make the footer go below both the cat and dog div. -->
-
 <head>
   <meta charset="UTF-8">
   <title>CSS Float</title>
@@ -19,17 +14,24 @@
       font-size: 2em;
     }
 
+    img {
+      float: left;
+    }
+
     .cat {
       background-color: aquamarine;
+      float: left;
     }
 
     .dog {
       background-color: coral;
+      float: right;
     }
 
     footer {
       text-align: center;
       background-color: blueviolet;
+      clear: both;
     }
   </style>
 </head>
