--- a/CSS/8.2 Responsiveness/grid.html
+++ b/CSS/8.2 Responsiveness/grid.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CSS Grid</title>
+  <title>CSS Grid Layout.</title>
   <style>
     .grid-container {
       display: grid;
       grid-template-columns: 1fr 1fr;
       grid-template-rows: 100px 200px 200px;
-      gap: 30px;
+      gap: 25px;
     }
 
     .first {
@@ -18,13 +18,13 @@
     }
 
     .card {
-      background-color: blue;
+      background-color: #453450;
     }
   </style>
 </head>
 
 <body>
-  <h1>CSS Grid</h1>
+  <h1>CSS Grid Layout</h1>
   <div class="grid-container">
     <div class="first card"></div>
     <div class="card"></div>
