--- a/CSS/8.2 Responsiveness/media-query.html
+++ b/CSS/8.2 Responsiveness/media-query.html
@@ -1,31 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Media Query</title>
-  <style>
-    div {
-      background-color: rebeccapurple;
-      height: 500px;
-      width: 500px;
-    }
-
-    @media (max-width: 600px) {
-
-      /* CSS for screens below or equal to 600px wide */
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Media Query Layout</title>
+    <style>
       div {
-        height: 200px;
-        width: 200px;
+        background-color: #453245;
+        height: 500px;
+        width: 500px;
       }
-    }
-  </style>
-</head>
 
-<body>
-  <h1>Media Query</h1>
-  <div></div>
-</body>
+      @media (max-width: 600px) {
+        /* CSS for screens below or equal to 600px wide */
+        div {
+          height: 250px;
+          width: 250px;
+        }
+      }
+    </style>
+  </head>
 
+  <body>
+    <h1>Media Query Layout</h1>
+    <div></div>
+  </body>
 </html>
