--- a/CSS/6.1 Font Properties/font-family.html
+++ b/CSS/6.1 Font Properties/font-family.html
@@ -1,57 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Font Family</title>
+    <style>
+      h1 {
+        font-family: "Poppins", sans-serif;
+      }
 
-<head>
-  <meta charset="UTF-8">
-  <title>Font Family</title>
-  <style>
-    h1{
-      font-family: 'Poppins', sans-serif;
-    }
+      #helvetica {
+        font-family: Helvetica, sans-serif;
+      }
 
-    #helvetica {
-      font-family: Helvetica, sans-serif;
-    }
+      #arial {
+        font-family: Arial, sans-serif;
+      }
 
-    #arial {
-      font-family: Arial, sans-serif;
-    }
+      #serif {
+        font-family: serif;
+      }
 
-    #serif {
-      font-family: serif;
-    }
+      #sans-serif {
+        font-family: sans-serif;
+      }
 
-    #sans-serif {
-      font-family: sans-serif;
-    }
+      #cursive {
+        font-family: cursive;
+      }
 
-    #cursive {
-      font-family: cursive;
-    }
+      #monospace {
+        font-family: monospace;
+      }
 
-    #monospace {
-      font-family: monospace;
-    }
+      #fantasy {
+        font-family: fantasy;
+      }
+    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-    #fantasy {
-      font-family: fantasy;
-    }
-  </style>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
-</head>
-
-<body>
-  <h1>Font Family</h1>
-  <p id="helvetica">Helvetica</p>
-  <p id="arial">Arial</p>
-  <p id="serif">Serif</p>
-  <p id="sans-serif">Sans Serif</p>
-  <p id="cursive">Cursive</p>
-  <p id="monospace">Monospace</p>
-  <p id="fantasy">Fantasy</p>
-
-</body>
-
+  <body>
+    <h1>Font Family</h1>
+    <p id="helvetica">Helvetica</p>
+    <p id="arial">Arial</p>
+    <p id="serif">Serif</p>
+    <p id="sans-serif">Sans Serif</p>
+    <p id="cursive">Cursive</p>
+    <p id="monospace">Monospace</p>
+    <p id="fantasy">Fantasy</p>
+  </body>
 </html>
