--- a/CSS/10.1 Grid Sizing/test.html
+++ b/CSS/10.1 Grid Sizing/test.html
@@ -98,9 +98,15 @@
   <textarea id="user-css" placeholder="Write your CSS code here..." rows="25">
 /* Write your CSS code below to make the purple items size, grow and shrink like the green ones.*/
 
+
 .grid-container {
- 
-}
+  display:grid;
+   grid-template-columns:auto 400px minmax(200px, 500px);
+  grid-template-rows: 1fr 1fr 2fr;
+  grid-auto-rows:50px;
+  }
+    
+    
   
   </textarea>
   <button onclick="applyUserCss()">Apply CSS</button>
@@ -113,6 +119,9 @@
       document.head.appendChild(style);
     }
   </script>
+  <!-- for automatic-template-rows and columns we can use this shorthand;
+  grid-template: 1fr 1fr 1fr / 1fr 1fr 1fr;
+first section is for the rows and the second one is for the columns. -->
 </body>
 
 </html>
