--- a/CSS/10.2 Grid Placement/exercise1.html
+++ b/CSS/10.2 Grid Placement/exercise1.html
@@ -24,10 +24,14 @@
       color: white;
       font-family: Arial, Helvetica, sans-serif;
       background-color: blueviolet;
-      /* TODO: Use Flexbox to align the text to the center horizontally and vertically. 
-      See goal1 image.
-      */
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
+
+    /* grid-column's short hand properties are :
+    grid-column-start:2 ;
+    grid-column-end:auto; */
   </style>
 </head>
 
