--- a/CSS/10.2 Grid Placement/exercise2.html
+++ b/CSS/10.2 Grid Placement/exercise2.html
@@ -50,10 +50,8 @@
          grid-column-start: 1;
          grid-column-end: 3; */
 
-         /*Third Way is this grid-area: Which is a short hand for grid row-start and end and grid column start and end. */
-      grid-area: 2 / 1 / 2/ 3;
-
-      /* TODO: Make the astronaut box look like the goal2 image. */
+      /*Third Way is this grid-area: Which is a short hand for grid row-start and grid column start and grid row end and grid column end. */
+      grid-area: 2 / 1 / 3/ 3;
     }
   </style>
 </head>
