--- a/CSS/10.2 Grid Placement/exercise3.html
+++ b/CSS/10.2 Grid Placement/exercise3.html
@@ -1,60 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Grid Placement</title>
+    <style>
+      body {
+        padding: 0;
+        margin: 0;
+      }
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Grid Placement</title>
-  <style>
-    body {
-      padding: 0;
-      margin: 0;
-    }
+      .container {
+        height: 100vh;
+        display: grid;
+        gap: 3rem;
+        grid-template-columns: 1fr 1fr 1.5fr;
+        grid-template-rows: 1fr 1fr;
+      }
 
-    .container {
-      height: 100vh;
-      display: grid;
-      gap: 3rem;
-      grid-template-columns: 1fr 1fr 1.5fr;
-      grid-template-rows: 1fr 1fr;
-    }
+      .item {
+        font-size: 5rem;
+        color: white;
+        font-family: Arial, Helvetica, sans-serif;
+        background-color: blueviolet;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
 
-    .item {
-      font-size: 5rem;
-      color: white;
-      font-family: Arial, Helvetica, sans-serif;
-      background-color: blueviolet;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      .cowboy {
+        background-color: #00b9ff;
+        grid-column: span 2;
+      }
 
-    }
+      .astronaut {
+        background-color: #03989e;
+        order: 1;
+        grid-area: 2 / 1 / 3 / 3;
+      }
 
-    .cowboy {
-      background-color: #00B9FF;
-      grid-column: span 2;
-    }
+      .book {
+        background-color: #e58331;
+        /* First way:;grid-row-start: 1;
+      grid-row-end: 3; */
 
-    .astronaut {
-      background-color: #03989E;
-      order: 1;
-      grid-area: 2 / 1 / 3 / 3;
-    }
+        /* Second-Way: grid-area:1/3/-1/-1; or grid-area: 1/3/3/4 */
+        /*Third Way */
+        grid-row: span 2;
+      }
+    </style>
+  </head>
 
-    .book {
-      background-color: #E58331;
-      /* TODO: Make the book div look like 
-      the goal3 image using grid-row. */
-    }
-  </style>
-</head>
-
-<body>
-  <div class="container">
-    <div class="item cowboy">🤠</div>
-    <div class="item astronaut">👨‍🚀</div>
-    <div class="item book">📖</div>
-  </div>
-</body>
-
+  <body>
+    <div class="container">
+      <div class="item cowboy">🤠</div>
+      <div class="item astronaut">👨‍🚀</div>
+      <div class="item book">📖</div>
+    </div>
+  </body>
 </html>
