--- a/CSS/10.3 Mondrian Project/index.html
+++ b/CSS/10.3 Mondrian Project/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mondrian Project</title>
     <style>
+      /* CSS Here */
       body {
         display: flex;
         justify-content: center;
@@ -13,6 +14,7 @@
         margin: 0;
         padding: 0;
       }
+
       .container {
         height: 748px;
         width: 748px;
@@ -22,37 +24,48 @@
         grid-template-rows: 414px 130px 155px 22px;
         gap: 9px;
       }
+
       .item {
         background-color: #f0f1ec;
       }
+
       .red {
         background-color: #e72f24;
       }
+
       .white1 {
         grid-column: span 3;
       }
+
       .white2 {
         grid-row: span 2;
       }
+
       .white3 {
         grid-area: 2 / 2 / 4 /4;
       }
+
       .blue {
         background-color: #004592;
         border-bottom: 10px solid #000;
       }
+
       .white4 {
         grid-row: span 2;
       }
+
       .yellow {
         background-color: #f9d01e;
       }
+
       .black {
         background-color: #232629;
       }
     </style>
   </head>
+
   <body>
+    <!-- HTML Here -->
     <div class="container">
       <div class="item red"></div>
       <div class="item white1"></div>
