--- a/CSS/10.3 Mondrian Project/index.html
+++ b/CSS/10.3 Mondrian Project/index.html
@@ -66,6 +66,9 @@
 
   <body>
     <!-- HTML Here -->
+    <header>
+      <h1>Mondrain Project For Grid Layout practice.</h1>
+    </header>
     <div class="container">
       <div class="item red"></div>
       <div class="item white1"></div>
