--- a/CSS/10.3 Mondrian Project/index.html
+++ b/CSS/10.3 Mondrian Project/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mondrian Project</title>
+    <title>The Mondrian Project</title>
     <style>
       /* CSS Here */
       body {
