--- a/Javascript/javascript.html
+++ b/Javascript/javascript.html
@@ -8,6 +8,7 @@
     <script src="./intro.js"></script>
     <script src="./datatypes.js"></script>
     <script src="./assignment-operator.js"></script>
+    <script src="./loops.js"></script>
 </head>
 
 <body>
