--- a/Javascript/index.html
+++ b/Javascript/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript Learning</title>
-    <script src="./intro.js"></script>
+    <!-- <script src="./intro.js"></script>
     <script src="./datatypes.js"></script>
     <script src="./assignment-operator.js"></script>
-    <script src="./loops.js"></script>
+    <script src="./loops.js"></script> -->
+    <script src="./AkshaySaini.js"></script>
 </head>
 <body>
+    <div>
+        <h1>Namaste JavaScript </h1>
+    </div>
 </body>
 </html>
