--- a/Javascript/index.html
+++ b/Javascript/index.html
@@ -9,6 +9,7 @@
     <script src="./assignment-operator.js"></script>
     <script src="./loops.js"></script> -->
     <script src="./AkshaySaini.js"></script>
+    <script src="./JSInterviewQuestions.js"></script>
 </head>
 <body>
     <div>
