--- a/Javascript/index.html
+++ b/Javascript/index.html
@@ -8,7 +8,7 @@
     <script src="./datatypes.js"></script>
     <script src="./assignment-operator.js"></script>
     <script src="./loops.js"></script> -->
-    <script src="./AkshaySaini.js"></script>
+    <!-- <script src="./AkshaySaini.js"></script> -->
     <script src="./JSInterviewQuestions.js"></script>
 </head>
 <body>
