--- a/Javascript/index.html
+++ b/Javascript/index.html
@@ -9,11 +9,14 @@
     <script src="./assignment-operator.js"></script>
     <script src="./loops.js"></script> -->
     <!-- <script src="./AkshaySaini.js"></script> -->
-    <script src="./JSInterviewQuestions.js"></script>
 </head>
 <body>
     <div>
         <h1>Namaste JavaScript </h1>
     </div>
+    <section>
+      <button id="clickMe">Click Me Bro.!</button>
+    </section>
+    <script src="./JSInterviewQuestions.js"></script>
 </body>
 </html>
