more examples of map reduce and filter

--- a/Javascript/index.html
+++ b/Javascript/index.html
@@ -15,7 +15,7 @@
         <h1>Namaste JavaScript </h1>
     </div>
     <section>
-      <button id="clickMe">Click Me Bro.!</button>
+      <button id="clickMe">Hover on Me Bro.!</button>
     </section>
     <script src="./JSInterviewQuestions.js"></script>
 </body>
