--- a/Javascript/index.html
+++ b/Javascript/index.html
@@ -20,7 +20,8 @@
     <section>
         <button id="clickMe">Hover on Me Bro.!</button>
     </section>
-    <script src="./JSInterviewQuestions.js"></script>
+    <!-- <script src="./JSInterviewQuestions.js"></script> -->
+    <script src="./promises.js"></script>
 </body>
 
 </html>
