--- a/Javascript/index.html
+++ b/Javascript/index.html
@@ -21,7 +21,8 @@
         <button id="clickMe">Hover on Me Bro.!</button>
     </section>
     <!-- <script src="./JSInterviewQuestions.js"></script> -->
-    <script src="./promises.js"></script>
+    <!-- <script src="./promises.js"></script> -->
+    <script src="./this.js"></script>
 </body>
 
 </html>
