--- a/Javascript/index.html
+++ b/Javascript/index.html
@@ -20,6 +20,7 @@
     <section>
         <button id="clickMe">Hover on Me Bro.!</button>
     </section>
+    <button onClick="alert(this.tagName)">Click Me</button>
     <!-- <script src="./JSInterviewQuestions.js"></script> -->
     <!-- <script src="./promises.js"></script> -->
     <script src="./this.js"></script>
