--- a/ReactJS/index.html
+++ b/ReactJS/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>React JS</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
@@ -42,57 +43,8 @@
   <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
   <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
 
-  <script>
-    /* const heading = React.createElement(
-    "h1",
-    {
-      id: "title", //All our tag attributes comes from this object.
-    },
-    "Hello React"
-  ); */
-
-    const heading1 = React.createElement(
-      "h1",
-      {
-        id: "title", //All our tag attributes comes from this object.
-      },
-      "Hello React"
-    );
-
-    const heading2 = React.createElement(
-      "h2",
-      {
-        id: "title", //All our tag attributes comes from this object.
-      },
-      "Hello React"
-    );
-
-    const heading3 = React.createElement(
-      "h3",
-      {
-        id: "title", //All our tag attributes comes from this object.
-      },
-      "Hello React"
-    );
-
-    const container = React.createElement("div", { id: "container" }, [
-      heading1,
-      heading2,
-      heading3,
-    ]);
-
-    const root = ReactDOM.createRoot(document.getElementById("root"));
-    // console.log(heading);
-    //passing a react element inside the root.
-    root.render(container); //here it takes the element and modifies the DOM, injects into the DOM.
-
-    const subHeading = React.createElement(
-      "h2",
-      { className: "subTitle" },
-      "Hello React JS to Everyone in the world."
-    );
-    const subtitle = ReactDOM.createRoot(document.getElementById("someDiv"));
-    subtitle.render(subHeading);
+  <script src="App.js">
+   
   </script>
 </body>
 
