--- a/ReactJS/index.html
+++ b/ReactJS/index.html
@@ -1,27 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>React JS</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>React JS</title>
-  <link rel="stylesheet" href="styles.css" />
-</head>
+  <body>
+    <div id="root">
+      <div id="container">
+        <h1>Heading 1</h1>
+        <h2>Heading 2</h2>
+        <h3>Heading 3</h3>
+      </div>
 
-<body>
-  <div id="root">
-    <div id="container">
-      <h1>Heading 1</h1>
-      <h2>Heading 2</h2>
-      <h3>Heading 3</h3>
+      <h1 id="title">Hello World</h1>
+      Not Rendered Here
     </div>
+    <div id="someDiv"></div>
 
-    <h1 id="title">Hello World</h1>
-    Not Rendered Here
-  </div>
-  <div id="someDiv"></div>
-
-  <!-- <script>
+    <!-- <script>
     
     const heading = document.createElement("h1");
     heading.innerHTML = "Namaste React from Chandu !";
@@ -40,14 +39,17 @@
 
   </script> -->
 
-  <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-  <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <script
+      crossorigin
+      src="https://unpkg.com/react@18/umd/react.development.js"
+    ></script>
+    <script
+      crossorigin
+      src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
+    ></script>
 
-  <script src="App.js">
-   
-  </script>
-</body>
-
+    <script src="App.js"></script>
+  </body>
 </html>
 
 <!-- Read about async vs defer Emmet, CDN, crossorigin,DOM :  That is used by VScode to automatically. And CDN is a content delivery network and it will connect to the nearest server through the help of internet with the script link. -->
